--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -13,7 +13,9 @@
 
 <body>
     <header>
-        <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
+        <center>
+            <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
+        </center>
     </header>
     <section class="container">
         <p>Alguien solicitó el restablecimiento de la contraseña del correo electrónico {{ email }}. Siga el enlace a continuación:</p>
