--- a/authentication/templates/auth/complete-address.html
+++ b/authentication/templates/auth/complete-address.html
@@ -146,7 +146,7 @@
         this.isOpen = false;
 
       },
-      geocodeLatLng(geocoder, map, infowindow) {
+      geocodeLatLng(geocoder, map, infoWindow) {
         geocoder.geocode({ location: this.address.position }, (results, status) => {
           if (status === "OK") {
             if (results[0]) {
@@ -156,8 +156,8 @@
                 position: this.address.position,
                 map: map,
               });
-              infowindow.setContent(results[0].formatted_address);
-              infowindow.open(map, marker);
+              infoWindow.setContent(results[0].formatted_address);
+              infoWindow.open(map, marker);
             } else {
               window.alert("No results found");
             }
@@ -166,7 +166,7 @@
           }
         });
       },
-      currentPosition(geocoder, infowindow) {
+      currentPosition(geocoder, infoWindow) {
         if (navigator.geolocation) {
           navigator.geolocation.getCurrentPosition(
             (position) => {
@@ -178,7 +178,7 @@
               };
               map.setCenter(this.address.position);
               window.address = this.address;
-              this.geocodeLatLng(geocoder, map, infowindow);
+              this.geocodeLatLng(geocoder, map, infoWindow);
             },
             () => {
               handleLocationError(true, infoWindow, map.getCenter());
@@ -195,12 +195,12 @@
           zoom: 17
         });
         const geocoder = new google.maps.Geocoder();
-        const infowindow = new google.maps.InfoWindow();
-        this.currentPosition(geocoder, infowindow);
+        const infoWindow = new google.maps.infoWindow();
+        this.currentPosition(geocoder, infoWindow);
 
         map.addListener("click", (mapsMouseEvent) => {
           this.address.position = mapsMouseEvent.latLng,
-            this.geocodeLatLng(geocoder, map, infowindow);
+            this.geocodeLatLng(geocoder, map, infoWindow);
         });
       },
     }
