--- a/courier_app/static/css/styles.css
+++ b/courier_app/static/css/styles.css
@@ -34,6 +34,7 @@
 @import 'pages/auth.css';
 @import 'pages/client-list.css';
 @import 'pages/dashboard.css';
+@import 'pages/error.css';
 @import 'pages/home.css';
 @import 'pages/order-create.css';
 @import 'pages/order-list.css';
