--- a/templates/500.html
+++ b/templates/500.html
@@ -1,19 +1,24 @@
 {% extends 'layouts/auth.html' %}
 {% block title %}
-    <title>Cuy Click Perú - Página no encontrada</title>
+    <title>Cuy Click Perú - Error en el servidor</title>
 {% endblock title %}
 {% load static %}
 {% block content %}
     <div class="error__wrapper">
         <div class="error__content">
-          <h1>404</h1>
-          <h5>Página no encontrada</h5>
+          <h1>500</h1>
+          <h5>Error en el servidor</h5>
           {% if request.user.is_authenticated %}
           <a href="{% url 'dash' %}" class="btn btn-primary btn-rounded btn-small">Regresar al inicio</a>
           {% else %}
           <a href="{% url 'pages:index' %}" class="btn btn-primary btn-rounded btn-small">Regresar al inicio</a>
           {% endif %}
         </div>
+        {% if exception %}
+        <div class="alert alert-danger">
+          {{ exception }}
+        </div>
+        {% endif %}
         <div class="error__img">
           <img src="{% static 'img/decoration/arrows_bottom.png' %}" alt="Arrows bottom">
         </div>
