--- a/orders/templates/orders/payment.html
+++ b/orders/templates/orders/payment.html
@@ -407,7 +407,7 @@
                         messagePromoCode.classList.add('text-danger');
                         messagePromoCode.innerText = 'Cupón de promoción no válido';
                     }
-                });
+                }).catch(error => console.log(error));
 
         } else {
             messagePromoCode.classList.add('text-danger');
