--- a/clients/templates/clients/detail.html
+++ b/clients/templates/clients/detail.html
@@ -30,9 +30,9 @@
 </div>
 
 {% if request.user == object.user %}
-<div class="profile-actions">
+<!-- <div class="profile-actions">
     <a href="#" class="btn btn-primary btn-small">Editar cuenta</a> 
-</div>
+</div> -->
 {% endif %}
 
 <div class="profile-content mb-10">
