--- a/orders/templates/orders/mails/complete-order.html
+++ b/orders/templates/orders/mails/complete-order.html
@@ -20,7 +20,7 @@
   </header>
   <section class="container">
     <div class="head">
-      <p>Hola, {{ detail.client.full_name }}</p>
+      <p>Hola, {{ full_name }}</p>
       <p>Te invitamos a dar seguimiento de tu pedido, con el # tracking podrás ver el estado y su ubicación. El resumen
         de tu pedido, es el siguiente:</p>
       <h5 class="mb-4"><span class="text-muted font-normal"># TRACKING </span> <strong>{{ detail.tracking_code }}</strong></h5>
