--- a/templates/layouts/pages.html
+++ b/templates/layouts/pages.html
@@ -21,9 +21,9 @@
 <body>
   <div class="page__wrapper">
     {% include 'partials/navbar-page.html' %}
-    <div class="container">
+    <main>
       {% block content %} {% endblock content %}
-    </div>
+    </main>
   </div>
   {% block scripts %} {% endblock scripts %}
 </body>
