--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -6,9 +6,9 @@
         </div>
     </div>
     <div class="navbar-right">
-        <a href="#" class="nav-item">
+        <!-- <a href="#" class="nav-item">
             <i class='bx bx-bell bx-sm bx-tada-hover'></i>
-        </a>
+        </a> -->
         <div class="dropdown" x-data="{ isOpen: false }">
             <a href="#" class="nav-item" @click="isOpen = !isOpen">
                 <div class="avatar avatar-md">
