--- a/courier_app/static/css/pages/home.css
+++ b/courier_app/static/css/pages/home.css
@@ -94,10 +94,36 @@
     margin-top: 50px;
     margin-bottom: 50px;
 }
+.arrow__big{
+    position: absolute;
+    left: 0;
+    bottom: -30%;
+    z-index: -1;
+}
+.arrows__bottom{
+    position: absolute;
+    right: 0;
+    bottom: -12%;
+    z-index: -1;
+}
+.arrow__right{
+    position: absolute;
+    right: -5%;
+    top: 27%;
+    z-index: -1;
+}
 .tracking__map{
-    background:rgb(209, 209, 209);
     width: 100%;
     height: 300px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 16px 6px rgba(0 0 0 / .1);
+    padding: 20px;
+}
+.tracking__map #map{
+    width: 100%;
+    height: 100%;
+    background: #c2c2c2;
     border-radius: 20px;
 }
 .content__form{
@@ -113,6 +139,7 @@
 .card-tracking{
     display: flex;
     background-color: rgb(var(--primary-page-color));
+    box-shadow: 0px 16px 6px rgba(0 0 0 / .1);
     color: white;
     overflow: hidden;
     margin-top: 0;
