--- a/orders/templates/orders/payment-success.html
+++ b/orders/templates/orders/payment-success.html
@@ -17,7 +17,7 @@
         <p>El detalle de tu pedido serán enviados al correo, de las personas que registrados en la dirección de envío, con el # TRACKING, podrás seguir la ubicación de tu pedido.</p>
         <div class="actions right mt-6">
         <a href="{% url 'orders:index' %}" class="btn btn-primary">Ir a mis pedidos</a>
-        <a href="#" class="btn btn-default">
+        <a href="{% url 'orders:rotulado' order.pk %}" class="btn btn-default">
           <i class='bx bx-download bx-sm'></i>
           <span>Rotulado</span>
         </a>
