--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,32 +1,5 @@
-{% load inlinecss %}
-{% load static %}
-{% inlinecss 'css/pages/email.css'%}
-<!DOCTYPE html>
-<html lang="en">
+    Alguien solicitó el restablecimiento de la contraseña del correo electrónico {{ email }}. Siga el enlace a continuación:
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Restablecer contraseña</title>
-</head>
+    {{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}
 
-<body>
-    <header>
-        <center>
-            <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
-        </center>
-    </header>
-    <section class="container">
-        <p>Alguien solicitó el restablecimiento de la contraseña del correo electrónico {{ email }}. Siga el enlace a continuación:</p>
-        <a href="{{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}">{{ protocol }}://{{ domain }}{% url "password_reset_confirm" uidb64=uid token=token %}</a>
-        <p style="margin-top: 10px;">Su nombre de usuario, en caso de que lo haya olvidado: {{ user.get_username }}</p>
-    </section>
-    <footer>
-        <p>Gracias por elegir nuestro servicio.</p>
-        <h5>CuyClick - Perú</h5>
-    </footer>
-</body>
-
-</html>
-{% endinlinecss %}
+    Su nombre de usuario, en caso de que lo haya olvidado: {{ user.get_username }}
