--- a/authentication/templates/auth/mails/verify-account.html
+++ b/authentication/templates/auth/mails/verify-account.html
@@ -14,7 +14,9 @@
 
 <body>
   <header>
-    <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
+    <center>
+      <img src="{{ protocol }}://{{ domain }}{% static 'img/logo-light.png' %}" alt="CuyClick - Perú">
+    </center>
   </header>
   <section class="container">
     <div class="head">
@@ -24,8 +26,10 @@
     </div>
   </section>
   <footer>
-    <p>Gracias por elegir nuestro servicio.</p>
-    <h5>CuyClick - Perú {{ current_year }}</h5>
+    <center>
+      <p>Gracias por elegir nuestro servicio.</p>
+      <h5>CuyClick - Perú {{ current_year }}</h5>
+    </center>
   </footer>
 </body>
 
