--- a/authentication/templates/auth/complete-info.html
+++ b/authentication/templates/auth/complete-info.html
@@ -52,7 +52,7 @@
     {% include "partials/message.html" %}
 
     <div class="mt-2 mb-2">
-        <p>Usar el código del motorizado: <b>CUYCLICKPERU</b></p>
+        <p>Usa el código del motorizado: <b>CUYCLICKPERU</b></p>
     </div>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
