--- a/templates/layouts/pages.html
+++ b/templates/layouts/pages.html
@@ -25,6 +25,7 @@
       {% block content %} {% endblock content %}
     </main>
   </div>
+  <script src="{% static 'js/main.js' %}"></script>
   {% block scripts %} {% endblock scripts %}
 </body>
 
