--- a/authentication/templates/auth/register.html
+++ b/authentication/templates/auth/register.html
@@ -12,6 +12,20 @@
     <form method="post">
         {% csrf_token %}
         {% for field in form %}
+        {% if field.field.widget.input_type == 'password' %}
+        <div class="form-group-password">
+          {{ field.label_tag }}
+          {{ field }}
+          <div id="show-password">mostrar</div>
+          {% if field.errors %}
+            {% for error in field.errors %}
+            <div class="text-invalid">
+              {{ error }}
+            </div>
+            {% endfor %}
+          {% endif %}
+        </div>
+        {% else %}
         <div class="form-group">
           {{ field.label_tag }}
           {{ field }}
@@ -23,6 +37,7 @@
             {% endfor %}
           {% endif %}
         </div>
+        {% endif %}
         {% endfor %}
         <button type="submit" class="btn btn-primary btn-full">Registrarse</button>
     </form>
