--- a/courier_app/static/css/pages/dashboard.css
+++ b/courier_app/static/css/pages/dashboard.css
@@ -1,11 +1,23 @@
-.grid-dash__driver{
+.content__wrapper{
     margin-top: 1.5rem;
+    width: 100%;
     display: grid;
-    grid-template-columns: 1fr 32%;
+    grid-template-columns: 1fr;
     gap: 15px;
+}
+
+.grid-dash__driver{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+    /* display: flex;
+    flex-direction: column; */
 }
 .grid-dash__driver h4{
     font-size: 15px;
+}
+.payment__now{
+    width: 100%;
 }
 .icon__position{
    display: flex;
@@ -32,11 +44,28 @@
     font-weight: bold;
 }
 .count__now p{
-    color: white;
-    font-size: 10px;
+    color: rgba(255 255 255 / .8);
+    font-size: 12px;
 }
-.card__order{
-    background: rgb(var(--secondary-color));
+.dash__count__wrapper{
+    width: 100%;
+    /* margin-left: 0;
+    margin-top: 15px; */
+    display: flex;
+    flex-direction: row;
+    overflow-x: auto;
+}
+.dash__count__wrapper > :not(template) ~ :not(template){
+    --space-x-reversed: 0;
+    margin-right: calc(.5rem * var(--space-x-reversed));
+    margin-left: calc(.5rem * (1 - var(--space-x-reversed)));
+    margin-bottom: 0;
+    margin-top: 0;
+}
+.dash__count__wrapper .card{
+    min-width: 135px;
+}
+.card__order, .card__client, .card__payment{
     border-radius: 16px;
     padding: 10px 12px;
     display:flex;
@@ -50,21 +79,103 @@
     justify-content: space-between;
     margin-bottom: 10px;
 }
-.card__order__head .icon{
-    background: #FF9253 !important;
-}
 .card__order__head .icon img{
     filter: invert(1);
     width: 18px;
     height: 18px;
 }
-.card__order h4{
+.card__order__head .icon{
+    font-size: 18px;
+}
+.dash__count__wrapper .card h4{
     color: white;
     font-size: 18px;
 }
-.card__order p{
-    color: white;
+.dash__count__wrapper .card p{
+    color: rgba(255 255 255 / .8);
     font-size: 10px;
     line-height: 1.5;
     font-weight: 400;
+}
+.card__order{
+    background: rgb(var(--secondary-color));
+}
+.card__client{
+    background: rgb(var(--primary-page-color));
+}
+.card__payment{
+    background: #FB3D3D;
+}
+.card__order .card__order__head .icon{
+    background: #FF9253 !important;
+}
+.card__client .card__order__head .icon{
+    background: #4898F9 !important;
+}
+.card__payment .card__order__head .icon{
+    background: #FF7B7B !important;
+}
+.dash__order__list{
+    display: flex;
+    flex-direction: column;
+    margin-top: 20px;
+}
+.dash__order__item{
+    display: flex;
+    border-bottom: 1px solid rgba(var(--primary-color), .1);
+    padding: 10px 0;
+    border-radius: 16px;
+}
+.dash__order__item:last-child{
+    border: none;
+}
+.dash__order__item .icon{
+    background: rgba(var(--accent-color), .4);
+    border-radius: 8px;
+    margin-right: 10px;
+}
+.dash__order__content .subheading{
+    font-weight: 500;
+    font-size: 12px;
+}
+.dash__order__content p{
+    font-size: 14px; 
+    width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+@media (min-width: 768px){
+
+}
+@media (min-width: 1024px){
+    .content__wrapper{
+        grid-template-columns: 1fr 25rem;
+    }
+    .grid-dash__driver{
+        grid-template-columns: 1fr 15rem;
+        /* flex-direction: row; */
+    }
+    .payment__now{
+        /* width: 60%; */
+        width: 100%;
+    }
+    .dash__count__wrapper{
+        flex-direction: column;
+        /* width: 40%; */
+        width: 100%;
+        /* margin-left: 15px; */
+        /* margin-top: 0; */
+    } 
+    .dash__count__wrapper > :not(template) ~ :not(template){
+        --space-x-reversed: 0;
+        margin-bottom: calc(.5rem * var(--space-x-reversed));
+        margin-top: calc(.5rem * (1 - var(--space-x-reversed)));
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .dash__count__wrapper .card p{
+        font-size: 12px;
+    }
 }
