--- a/courier_app/static/css/pages/dashboard.css
+++ b/courier_app/static/css/pages/dashboard.css
@@ -123,27 +123,29 @@
 .dash__order__item{
     display: flex;
     border-bottom: 1px solid rgba(var(--primary-color), .1);
-    padding: 10px 0;
-    border-radius: 16px;
+    padding: 15px 0;
 }
 .dash__order__item:last-child{
     border: none;
 }
 .dash__order__item .icon{
-    background: rgba(var(--accent-color), .4);
     border-radius: 8px;
     margin-right: 10px;
+    width: 18%;
+}
+.dash__content__wrapper{
+    display: flex;
+    flex: auto;
+}
+.dash__order__content{
+    width: 77%;
 }
 .dash__order__content .subheading{
     font-weight: 500;
     font-size: 12px;
 }
 .dash__order__content p{
-    font-size: 14px; 
-    width: 250px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    font-size: 13px; 
 }
 @media (min-width: 768px){
 
